--- a/cnr-data-flow-monitoring-server/tags/cnr-data-flow-monitoring-server-0.0.6/pom.xml
+++ b/cnr-data-flow-monitoring-server/tags/cnr-data-flow-monitoring-server-0.0.6/pom.xml
@@ -91,8 +91,8 @@
 		<!-- Jackson Databind -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.4.3</version>
+		  	<artifactId>jackson-databind</artifactId>
+		  	<version>[2.8.11.1,)</version>
 		</dependency>
 
 		<!-- PostgreSQL -->
